--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,6 +7,10 @@ on:
     paths-ignore:
       - 'kubernetes/deployment.yaml'
 
+permissions:
+  packages: write  # ✅ This should be at the top level, not inside 'on:'
+
+
 jobs:
   test:
     name: Unit Testing
