--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,14 +2,12 @@ name: CI/CD Pipeline
 
 on:
   workflow_dispatch:  # Ignore changes to this file to prevent loops
+  push:
+    branches: [ main ]
   pull_request:
     branches: [ main ]
     paths-ignore:
       - 'kubernetes/deployment.yaml'
-
-permissions:
-  packages: write  # ✅ This should be at the top level, not inside 'on:'
-
 
 jobs:
   test:
@@ -151,6 +149,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [docker]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    # if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
